src/main/java/com/example/obrestdata_jpa/Error/NotFoundException.java
package com.example.obrestdata_jpa.Error;

public class NotFoundException extends RuntimeException {

    public NotFoundException(String message) {
        super(message);
    }
}
